--- a/Homework2/main.tex
+++ b/Homework2/main.tex
@@ -6,6 +6,8 @@
 \usepackage{graphicx}
 \usepackage{hyperref} 
 \usepackage[labelfont=bf]{caption}
+\usepackage{geometry}
+\geometry{margin=4cm}
 
 \newtheorem{theorem}{Theorem}
 \newtheorem{lemma}[theorem]{Lemma}
