--- a/Homework3/main.tex
+++ b/Homework3/main.tex
@@ -49,8 +49,14 @@
 \lstset{style=mystyle}
 
 \begin{document}
-\author{Yosef Goren}
-\title{}
+\author{Yosef Goren \& Ori Evron}
+\title{Internet Networking - Homework 3}
 \maketitle
+\tableofcontents
+
+\input{q1.tex}
+\input{q2.tex}
+\input{q3.tex}
+\input{q4.tex}
 
 \end{document}
