minor report fix and changed lb.run

--- a/Homework4/Report/main.tex
+++ b/Homework4/Report/main.tex
@@ -58,9 +58,11 @@
 The full source code to our solution in our \href{https://github.com/yosefgoren/Internet-Networking-236341}{GitHub Repository}
 under the folder 'Homework4/loadBalancer'.\\
 To run the simulation go to the 'loadBalancer' folder in the provided zip file or in the repo
-and run the 'lb.run' script.\\
+and run \texttt{python loadBalancerLab.py}.\\
 To run the emulator, go to the same folder and run \texttt{./emulator <sched\_alg\_name>}
-where \texttt{<sched\_alg\_name>} should be one of '\texttt{first, rr, greedy}'.
+where \texttt{<sched\_alg\_name>} should be one of '\texttt{first, rr, greedy}'.\\
+Note these same parameters can be passed to the 'load\_balancer' executable to select it's
+scheduling algorithm.
 
 \section{Software Design}
 \subsection{Overview}
